fix: improved check finished

--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -194,7 +194,7 @@ jobs:
 
       - name: 📦 Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v5.3.0
+        uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ inputs.registry }}/${{ matrix.target.imageName }}
           tags: |
@@ -243,12 +243,10 @@ jobs:
       actions: read
 
     steps:
-      - name: 🏁 Workflow conclusion
-        uses: technote-space/workflow-conclusion-action@v3
-
-      - name: 🏁 Check finished build
+      - name: Check build failure
         run: |
-          if [ "${{ env.WORKFLOW_CONCLUSION }}" != "success" ]; then
+          echo "Build status: ${{ needs.build.result }}"
+          if [ "${{ needs.build.result }}" != "success" ]; then
             echo "Build failed"
             exit 1
           fi
