feat: supported merge queue

--- a/.github/workflows/renovate-validate.yml
+++ b/.github/workflows/renovate-validate.yml
@@ -9,6 +9,7 @@ on:
       - "renovate/**"
       - "renovate.json"
       - ".github/workflows/renovate-validate.yml"
+  merge_group:
 
 jobs:
   renovate-validate:
