chore(deps): update pnpm version to 10.2.1 in package.json files

--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,10 @@
     "fileMatch": [
       "^(workflows/.*\\.ya?ml|)$"
     ]
+  },
+  "node": {
+    "fileMatch": [
+      "^(dockerfiles/tests/.*/package.json|)$"
+    ]
   }
 }
