--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -282,20 +282,20 @@ jobs:
           echo "images=$(echo "${{ inputs.platforms }}" | sed -r 's#([a-z]+)\/([a-z0-9]+)#${{ inputs.registry }}\/${{ matrix.target.imageName }}:latest-\2#g')" >> $GITHUB_OUTPUT
 
       - name: 📝 Create and push manifest images (latest)
-        uses: Noelware/docker-manifest-action@1.0.0
+        uses: Noelware/docker-manifest-action@0.4.3
         # プラットフォームがひとつの場合はマージ処理を行わない
         if: ${{ needs.calc-version.outputs.need-merge == 'true' }}
         with:
-          tags: ${{ steps.extra-images.outputs.images }}
+          images: ${{ steps.extra-images.outputs.images }}
           inputs: ${{ inputs.registry }}/${{ matrix.target.imageName }}:latest
           push: true
 
       - name: 📝 Create and push manifest images (version)
-        uses: Noelware/docker-manifest-action@1.0.0
+        uses: Noelware/docker-manifest-action@0.4.3
         # プラットフォームがひとつの場合はマージ処理を行わない
         if: ${{ needs.calc-version.outputs.need-merge == 'true' }}
         with:
-          tags: ${{ steps.extra-images.outputs.images }}
+          images: ${{ steps.extra-images.outputs.images }}
           inputs: ${{ inputs.registry }}/${{ matrix.target.imageName }}:${{ needs.calc-version.outputs.tag }}
           push: true
 
